Change reference grid on Survey_Duration, minor updates on text, add official AOU data object to raw data file for sequencing target species.

--- a/analysis/paper/KLGOCWS_References.bib
+++ b/analysis/paper/KLGOCWS_References.bib
@@ -9,6 +9,15 @@ pages = {16},
 title = {{Waterbird Monitoring Protocol for Klondike Gold Rush National Historical Park , Skagway , Alaska Standard Operating Procedure ( SOP ) {\#} 3 Conducting the Waterbird Survey Transect Revision History Log :}},
 year = {2009}
 }
+@misc{AOS:2018,
+  author = {Chesser, R. T. and Burns, K. J. and Cicero, C. and Dunn, J. L. and Kratter, A. W.  and Lovette, I. J. and Rasmussen, P. C. and Remsen, Jr., J. V. and Stotz, D. F.  and Winger, B. M. and Winker,K.},
+  title = {Check-list of North American Birds (online).},
+  year = {2018},
+  note = {data retrieved from American Ornithological Society,
+          \url{http://checklist.aou.org/taxa}},
+}
+.
+
 @article{Drazkowski2011,
 author = {Drazkowski, Barry and Robertson, Andrew and Bernatz, Greta},
 file = {:C$\backslash$:/Users/jhreynolds/Documents/Mendeley Desktop/Drazkowski, Robertson, Bernatz/2011/Drazkowski, Robertson, Bernatz{\_}2011{\_}Unknown{\_}Klondike Gold Rush National Historical Park Natural Resource Condition Assessment.pdf:pdf},
