changed paper.Rmd chunk options / deleted old scripts.

--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -286,7 +286,7 @@ How consistently are they able to conduct surveys at each site? E.g., how often 
 # source("../scripts/survey_access.R", echo=FALSE)
 ```
 
-```{r Fig-SiteAccess, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.cap="",warning= FALSE}
+```{r Fig-SiteAccess, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis',fig.height=20, fig.width=12, fig.cap="",warning= FALSE}
 # print(plot_access)
 ```
 
@@ -297,7 +297,7 @@ The time spent at each site during a survey has varied widely across the years, 
 source("../scripts/survey_duration.R", echo=FALSE)
 ```
 
-```{r Fig-SurveyEffort, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.cap="",warning= FALSE}
+```{r Fig-SurveyEffort, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.height=15, fig.width=12,fig.cap="",warning= FALSE}
 print(plot_duration)
 ```
 
@@ -362,7 +362,7 @@ Add sentence or two about success in completing surveys. Doesn't appear to be an
 
 **MADELEINE: Dig in to Site 1 to make sure there aren't messages hidden in 'notes' since that is the location that consists of cruise ship docking areas for a good chunk of the space.**
 
-```{r Fig-SiteSurveyCompletion, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.cap="Need to add caption.",warning=FALSE}
+```{r Fig-SiteSurveyCompletion, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis',fig.height=10, fig.width=18, fig.cap="Need to add caption.",warning=FALSE}
 
 print(plot_unitSuccess)
 ```
@@ -377,16 +377,9 @@ source("../scripts/survey_timing_EDA.R", echo=FALSE)
 
 ```
 
-```{r Fig-SurveyTiming1, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.cap="The annual dates of the first and last survey have both varied by over a month across the years."}
+```{r Fig-SurveyTiming1, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis',fig.height=10, fig.width=12, fig.cap="The annual dates of the first and last survey have both varied by over a month across the years."}
 
 print(plot_alldates)
-```
-
-
-JOEL - I specified ncol = 3 in the facet command but my html doesn't update with it (I know the command itself works since I can see the zoom in the script)? Are you able to see it? and/or does it work in solving the space problem?
-```{r Fig-SurveyTiming2, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.cap=""}
-
-print(plot_phenology)
 ```
 
 Questions: what is cue to start of survey season?
@@ -407,7 +400,7 @@ print(plot_timing_1)
 
 > SECOND graph - similar but showing last day of the season the species was observed each year.
 
-```{r Fig-SurveyDates2, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.cap="The last sighting of each species each year.", warning=FALSE}
+```{r Fig-SurveyDates2, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.height=20, fig.width=12, fig.cap="The last sighting of each species each year.", warning=FALSE}
 print(plot_timing_2)
 ```
 
@@ -417,7 +410,7 @@ print(plot_timing_2)
 Narrative on how well the current surveys are capturing the Spring arrival and Fall departure of each of the targeted species (\@ref(fig:Fig-SpeciesTiming)). Implications for informing Audubon Climate Change Watch or national phenology network, yadda yadd.
 
 
-```{r Fig-SpeciesTiming2, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.cap="For each of the target species, the dates on which they were observed in any of the sample areas."}
+```{r Fig-SpeciesTiming2, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.height=25, fig.width=12, fig.cap="For each of the target species, the dates on which they were observed in any of the sample areas."}
 
 print(plot_phenology)
 ```
