--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -46,7 +46,7 @@ abstract: The Coastal Waterbird Survey has been conducted, with varying levels o
 knitr::opts_chunk$set(
   collapse = TRUE,
   warning = TRUE, # set to FALSE when done
-  message = TRUE, # set to FALSE when doen
+  message = TRUE, # set to FALSE when done
   echo = FALSE,
   comment = "#>",
   dev = c('png','pdf'),
@@ -57,14 +57,13 @@ knitr::opts_chunk$set(
 
 library(dplyr);library(ggplot2);library(dbplyr);library(readr);library(stringr);library(tidyr);library(lubridate);library(lattice);library(ggthemes);library(ggforce)
 
-
 ```
 # NOTES To Madeleine
-- see edits in survey_duration.R to aid interpretation by the viewer (e.g., changes in x axis tick locations, etc.)
-- documentation in scripts
+- see edits in survey_duration.R to aid interpretation by the viewer (e.g., changes in x axis tick locations, etc.) $\checkmark$
+- documentation in scripts $\checkmark$
 - **NEXT Priority Milestones**: note - all references to line numbers are prior to any other edits!
-- finish graphs of first & last observation per year for each target species (around line 386);**ultimately** add a fitted linear trend line to each of those (we need to account for frequency of surveying, so some subtle effort things here, but can resolve that later);
-- graphs of species occurrence (around line 407) for each of target species; 
+- finish graphs of first & last observation per year for each target species (around line 386);**ultimately** add a fitted linear trend line to each of those (we need to account for frequency of surveying, so some subtle effort things here, but can resolve that later); $\checkmark$
+- graphs of species occurrence (around line 407) for each of target species; $\checkmark$
 - covariate distribution graphs (lots of univariate & bivariate things; around line 534);
 - plot of total # spp sighted each season across years (around line 600)
 
@@ -256,8 +255,8 @@ What sort of observations would trigger action? What actions?
 # else source("./scripts/data_retrievalNPS.R")
 
 #NOTE: working directory when knitting markup is /analysis/paper. So relative pathway needs to be ../scripts etc.
-source("../scripts/data_retrievalCSV.R") 
 
+source("../scripts/data_retrievalCSV.R") 
 
 ```
 
@@ -280,14 +279,22 @@ source("../scripts/target_species.R")
 *Site Accessibility*
 How consistently are they able to conduct surveys at each site? E.g., how often is Site 1 dropped due to cruise ships?
 
-> SECOND graph: [THIS IS SECONDARY PRIORITY] x axis is Time of Day, perhaps broken in to 1 or 2 hour blocks , y axis is ....this is a tough one so totally open to your ideas. How about y axis is % [0, 1.0] and for each year there is a different curve showing the % of planned surveys (as defined above) that were successfully completed that season within that time block; facet by site. So we are seeing whethere there are consistently problematic times of day at each site. 
-```{r SiteAccess, eval=TRUE, cache = FALSE, include = FALSE}
-# STILL NEED TO CREATE
-# source("../scripts/survey_access.R", echo=FALSE)
+> SECOND graph: [THIS IS SECONDARY PRIORITY] x axis is Time of Day, perhaps broken in to 1 or 2 hour blocks , y axis is ....this is a tough one so totally open to your ideas. How about y axis is % [0, 1.0] and for each year there is a different curve showing the % of planned surveys (as defined above) that were successfully completed that season within that time block; facet by site. So we are seeing whether there are consistently problematic times of day at each site. 
+> JOEL: some updates on this! for now, times are in hour blocks. There can't be lines/curves for year since they are unreadable (up/down). I also tried to use color as a factor but then the graphs are crowded (so many years). So I have 2 alternatives, I don't really like either but some are more readable than others. See below.
+
+```{r SiteAccess, eval=TRUE, cache = FALSE}
+
+source("../scripts/survey_access.R", echo=FALSE)
 ```
 
-```{r Fig-SiteAccess, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis',fig.height=20, fig.width=12, fig.cap="",warning= FALSE}
-# print(plot_access)
+```{r Fig-SiteAccess1, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis',fig.height=20, fig.width=12, fig.cap="",warning= FALSE}
+
+print(plot_success)
+```
+
+```{r Fig-SiteAccess2, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis',fig.height=15, fig.width=12, fig.cap="",warning= FALSE}
+
+print(plot_success3)
 ```
 
 *Survey Effort*
@@ -297,7 +304,8 @@ The time spent at each site during a survey has varied widely across the years, 
 source("../scripts/survey_duration.R", echo=FALSE)
 ```
 
-```{r Fig-SurveyEffort, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.height=15, fig.width=12,fig.cap="",warning= FALSE}
+```{r Fig-SurveyEffort, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.height=12, fig.width=12, fig.cap="",warning= FALSE}
+
 print(plot_duration)
 ```
 
@@ -307,21 +315,26 @@ Questions: clarify role of kingfishers.
 
 Incidental: 48 other spp
 
-> MADELEINE: add a graphic of spp frequency of occurrence (maybe some panel-rich figure, one panel per spp, showing annual average percentage of daily observations in which spp was sighted - as line-connected points?- ordered from most frequently observed spp to least frequently. (e.g., use facets). x axis is Day of Season, y axis is % as decimal [0, 1.0], curves for each year; facet by species. LET"S DISCUSS - Think about appropriate estimator so annual value accounts for variation in survey effort across years.) likely needs to be a full page figure (e.g., we'll need to set  fig.width and fig.height). TAKE A STAB AT THIS BUT DON'T get lost trying to complete all the refinements. Really we should build up to this.
+> MADELEINE: add a graphic of spp frequency of occurrence (maybe some panel-rich figure, one panel per spp, showing annual average percentage of daily observations in which spp was sighted - as line-connected points?- ordered from most frequently observed spp to least frequently. (e.g., use facets). x axis is Day of Season, y axis is % as decimal [0, 1.0], curves for each year; facet by species.
+> JOEL: I did some graphs for species occurrence that fit the description but not sure if they were what you were looking for? They do show species occurrence relative to others; as annual/daily percentage of daily observations in which spp was sighted (percentage calculated by annual/daily obs per species over all total obs - is this what you meant? let me know).
+Lines didn't work though (lots of ups and downs)
 
 
 ```{r EDA_AllSpp_Frequency, eval=TRUE, cache = FALSE, include = FALSE, fig.height=8, fig.width=6}
-# lets discuss what I'm thinking of. It is of secondary importance, so don't want this 
-# to consume tons of your time.
 
-#source("../scripts/survey_timing_EDA.R", echo=FALSE)
+source("../scripts/occurrence_freq.R", echo=FALSE)
 
 ```
 
 
-```{r Fig-AllSppFreq, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.cap="blah blah about consistency in target species occurrence. Maybe something about new spp showing up?"}
+```{r Fig-AllSppFreq1, echo=FALSE, eval=TRUE, warning=FALSE, cache=FALSE, fig.show= 'asis', fig.height=20, fig.width=12, fig.cap="blah blah about consistency in target species occurrence. Maybe something about new spp showing up?"}
 
-#print(Plot1)
+print(plot_occurrenceDay)
+```
+
+```{r Fig-AllSppFreq2, echo=FALSE, eval=TRUE, warning=FALSE, cache=FALSE, fig.show= 'asis', fig.height=25, fig.width=10, fig.cap="blah blah about consistency in target species occurrence. Maybe something about new spp showing up?"}
+
+print(plot_occurrenceYear)
 ```
 
 
@@ -355,6 +368,7 @@ All data, original data forms, and field notes were archived at KLGO.
 
 ```{r SiteSurveyCompletion, eval=TRUE, cache = FALSE, include = FALSE}
 # dotplot of survey occurrences by unit and whether there were observations
+
 source("../scripts/survey_sites.R", echo=FALSE)
 ```
 
@@ -362,7 +376,7 @@ Add sentence or two about success in completing surveys. Doesn't appear to be an
 
 **MADELEINE: Dig in to Site 1 to make sure there aren't messages hidden in 'notes' since that is the location that consists of cruise ship docking areas for a good chunk of the space.**
 
-```{r Fig-SiteSurveyCompletion, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis',fig.height=10, fig.width=18, fig.cap="Need to add caption.",warning=FALSE}
+```{r Fig-SiteSurveyCompletion, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis',fig.height=15, fig.width=18, fig.cap="Need to add caption.",warning=FALSE}
 
 print(plot_unitSuccess)
 ```
@@ -373,11 +387,11 @@ The annual dates of the first and last survey each year has varied by over a mon
 
 ```{r EDA_SurveyTiming, eval=TRUE, cache = FALSE, include = FALSE}
 # dotplot of survey times by year
-source("../scripts/survey_timing_EDA.R", echo=FALSE)
 
+source("../scripts/survey_timing_EDA.R", echo=FALSE)
 ```
 
-```{r Fig-SurveyTiming1, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis',fig.height=10, fig.width=12, fig.cap="The annual dates of the first and last survey have both varied by over a month across the years."}
+```{r Fig-SurveyTiming1, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis',fig.height=8, fig.width=12, fig.cap="The annual dates of the first and last survey have both varied by over a month across the years."}
 
 print(plot_alldates)
 ```
@@ -390,17 +404,20 @@ Want to see if the survey design's start and end dates each season need to be mo
 > MADELEINE: FIRST graph - x axis is year, y axis is Day of Season, curve for each of the target species defined in next sentence; possibly consider facet by site if anything of interest is revealed when doing so. Curve should be made of points of the first day the species was observed each year; maybe do one with just raw points connected by line segments and one with some sort of smooth - use default until we get a chance to look at these and talk about smoothers. Different color for each of the target species. Might be too many curves (species), in which case define some grouping on species or facet by species (more important than site).
 
 ```{r SurveyDates, eval=TRUE, cache = FALSE, include = FALSE}
-# scatterplot of species' first and sightings compared to survey season start
+
+# scatterplot of species' first and last sightings compared to survey season start
 source("../scripts/survey_dates.R", echo=FALSE)
 ```
 
 ```{r Fig-SurveyDates1, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.cap="The first sighting of each species each year.",fig.height=20, fig.width=12, warning=FALSE}
+
 print(plot_timing_1)
 ```
 
 > SECOND graph - similar but showing last day of the season the species was observed each year.
 
 ```{r Fig-SurveyDates2, echo=FALSE, eval=TRUE, cache=FALSE, fig.show= 'asis', fig.height=20, fig.width=12, fig.cap="The last sighting of each species each year.", warning=FALSE}
+
 print(plot_timing_2)
 ```
 
@@ -601,6 +618,8 @@ Observer bias: variation in number of surveys and length of monitoring season
 .Across years: observer turnover rate, varying experience
 
 Number of surveys across census units per year (2003-2009) & distribution of survey dates
+
+MADELEINE
 
 Percent of expected waterbird and breeding landbird species (174) confirmed (158; 91%)
 
